--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-
-
- <nav class="nav">
+<nav class="nav">
   <div class="nav-left">
     <a class="nav-item">
       <img src="http://bulma.io/images/bulma-logo.png" alt="Bulma logo">
@@ -24,13 +22,16 @@
   <!-- You need JavaScript to toggle the "is-active" class on "nav-menu" -->
   <span class="nav-toggle">
     <span></span>
-    <span></span>
-    <span></span>
+  <span></span>
+  <span></span>
   </span>
 
   <!-- This "nav-menu" is hidden on mobile -->
   <!-- Add the modifier "is-active" to display it on mobile -->
   <div class="nav-right nav-menu">
+    <a class="nav-item" [routerLink]="'home2'" routerLinkActive="active">
+      Home
+    </a>
     <a class="nav-item" [routerLink]="'home'" routerLinkActive="active">
       Home
     </a>
@@ -44,7 +45,7 @@
     <div class="nav-item">
       <div class="field is-grouped">
         <p class="control">
-          <a class="button" >
+          <a class="button">
             <span class="icon">
               <i class="fa fa-twitter"></i>
             </span>
@@ -63,7 +64,7 @@
     </div>
   </div>
 </nav>
-    
+
 <section class="hero is-primary">
   <div class="hero-body">
     <div class="container">
@@ -80,7 +81,7 @@
 <body>
   <section class="section">
     <div class="container">
-   <router-outlet></router-outlet>
+      <router-outlet></router-outlet>
     </div>
   </section>
 </body>
@@ -91,8 +92,7 @@
     <div class="content has-text-centered">
       <p>
         <strong>Bulma</strong> by <a href="http://jgthms.com">Jeremy Thomas</a>. The source code is licensed
-        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
-        is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC ANS 4.0</a>.
+        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC ANS 4.0</a>.
       </p>
       <p>
         <a class="icon" href="https://github.com/jgthms/bulma">
